# RoAndroidTest

./: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/android/serialport/api/: SerialPort.java  SerialPortFinder.java
app/src/main/java/com/licheedev/serialtool/activity/: CanActivity.java  GpioActivity.java  LoRaActivity.java  MainActivity.java  PsamActivity.java  StartActivity.java
app/src/main/java/com/licheedev/serialtool/comn/: Device.java  PortUtils.java  SerialPortManager.java  SerialReadThread.java
app/src/main/java/com/licheedev/serialtool/comn/message/: RecvMessage.java  SendMessage.java
app/src/main/java/jnigpio/: GPIOControl.java
app/src/main/java/jnisctool/: SCTool.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/GpioControl/: CMakeLists.txt  GPIOControl.c  GPIOControl.h
app/src/main/jni/SCTool/: CMakeLists.txt  cainiao_crypto.c  cainiao_crypto.h  ccid.c  commands.c  config.h  debug.c  defs.h  ifdhandler.c  sc_find_serial.c  sc_find_serial.h  sc_tool.cpp  sc_tool.h  winscard.h
app/src/main/jni/SCTool/towitoko/: pps.c
app/src/main/jni/SerialPort/: CMakeLists.txt  SerialPort.h
app/src/main/res/layout/: activity_main.xml  gpio_layout.xml  lora_test_layout.xml  psam_test_layout.xml  start_layout.xml
app/src/main/res/values/: colors.xml  dimens.xml  string_arrays.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
